--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ GOOGLE_CLIENT_SECRET=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
 
 NEXTAUTH_URL=http://localhost:3000
 JWT_SECRET=PLNcp5V0kPnE/6Fow10HY7jCR2wjPlK4kGREFCSVsnM
+
+MONGODB_URI=mongodb+srv://MyWebPage:password1234@cluster0.g1en2se.mongodb.net/test
