--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "^8.8.0",
     "fuse.js": "^6.6.2",
+    "mongoose": "^7.0.4",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "next-compose-plugins": "^2.2.1",
@@ -28,6 +29,7 @@
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-simple-star-rating": "^5.1.7",
+    "react-toastify": "^9.1.2",
     "sharp": "^0.32.0",
     "webp-loader": "^0.6.0"
   },
