--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GOOGLE_CLIENT_ID=349062008446-c9evidb0ju369fg408cats3rvi68nt58.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https:nextaiplattform.vercel.app
 JWT_SECRET=PLNcp5V0kPnE/6Fow10HY7jCR2wjPlK4kGREFCSVsnM
 
 MONGODB_URI=mongodb+srv://MyWebPage:password1234@cluster0.g1en2se.mongodb.net/test
